<?xml version="1.0"?>
<package format="3">
  <name>kuka_iiwa_description</name>
  <version>0.0.1</version>
  <description>Description package of the KUKA IIWA robots</description>
  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
